--- a/index.html
+++ b/index.html
@@ -14,46 +14,47 @@
       <img src="./assets/img/man_on_beach.jpeg" alt="man on beach" />
       <h2>WORK</h2>
     </header>
+    <main>
+      <section class="orbis">
+        <p class="year">2019</p>
+        <h3 class="white">ORBIS</h3>
+        <p class="description">Corporate Website</p>
+        <a href="#" class="white">DIVE IN</a>
+        <div class="number white">01</div>
+      </section>
 
-    <section class="orbis">
-      <p class="year">2019</p>
-      <h3 class="white">ORBIS</h3>
-      <p class="description">Corporate Website</p>
-      <a href="#" class="white">DIVE IN</a>
-      <div class="number white">01</div>
-    </section>
-
-    <section class="rollr">
-      <p class="year">2019</p>
-      <h3 class="black">ROLLR</h3>
-      <p class="description">Marketing Website<</p>
-      <a href="#" class="black">DIVE IN</a>
-      <div class="number black">02</div>
-    </section>
-    <section class="galitos">
-      <p class="year">2018</p>
-      <h3 class="white">GALITO´S</h3>
-      <p class="description">Marketing Website</p>
-      <a href="#" class="white">DIVE IN</a>
-      <div class="number white">03</div>
-    </section>
-    <section class="tretto">
-      <p class="year">2017</p>
-      <h3 class="black">TRETTO</h3>
-      <p class="description">Mobile App</p>
-      <a href="#" class="black">DIVE IN</a>
-      <div class="number black">04</div>
-    </section>
-    <section class="whatmore">
-      <div class="what">What more?</div>
-      <p class="statement">
-        Before sharing the casual social channels, I wanted to highlight that
-        I’m open for freelance projects and also possible job opportunities.
-        Things I like are working remotely, something abroad, an working on
-        meaningful products that care about aesthetics.
-      </p>
-      <div class="email">super@super.de</div>
-    </section>
+      <section class="rollr">
+        <p class="year">2019</p>
+        <h3 class="black">ROLLR</h3>
+        <p class="description">Marketing Website<</p>
+        <a href="#" class="black">DIVE IN</a>
+        <div class="number black">02</div>
+      </section>
+      <section class="galitos">
+        <p class="year">2018</p>
+        <h3 class="white">GALITO´S</h3>
+        <p class="description">Marketing Website</p>
+        <a href="#" class="white">DIVE IN</a>
+        <div class="number white">03</div>
+      </section>
+      <section class="tretto">
+        <p class="year">2017</p>
+        <h3 class="black">TRETTO</h3>
+        <p class="description">Mobile App</p>
+        <a href="#" class="black">DIVE IN</a>
+        <div class="number black">04</div>
+      </section>
+      <section class="whatmore">
+        <div class="what">What more?</div>
+        <p class="statement">
+          Before sharing the casual social channels, I wanted to highlight that
+          I’m open for freelance projects and also possible job opportunities.
+          Things I like are working remotely, something abroad, an working on
+          meaningful products that care about aesthetics.
+        </p>
+        <div class="email">super@super.de</div>
+      </section>
+    </main>
     <footer>
       <section class="links">Dribbble Instagram Twitter</section>
     </footer>
