hover black not white

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
         <p class="year">2019</p>
         <h3 class="white">ORBIS</h3>
         <p class="description">Corporate Website</p>
-        <a href="#" class="white">DIVE IN</a>
-        <div class="number white">01</div>
+        <a href="#" class="white white-border">DIVE IN</a>
+        <p class="number gray white-number-hover">01</p>
       </section>
 
       <section class="rollr">
         <p class="year">2019</p>
         <h3 class="black">ROLLR</h3>
-        <p class="description">Marketing Website<</p>
-        <a href="#" class="black">DIVE IN</a>
+        <p class="description">Marketing Website</p>
+        <a href="#" class="black black-border">DIVE IN</a>
         <div class="number black">02</div>
       </section>
       <section class="galitos">
         <p class="year">2018</p>
         <h3 class="white">GALITO´S</h3>
         <p class="description">Marketing Website</p>
-        <a href="#" class="white">DIVE IN</a>
-        <div class="number white">03</div>
+        <a href="#" class="white white-border">DIVE IN</a>
+        <p class="number gray">03</p>
       </section>
       <section class="tretto">
         <p class="year">2017</p>
         <h3 class="black">TRETTO</h3>
         <p class="description">Mobile App</p>
-        <a href="#" class="black">DIVE IN</a>
+        <a href="#" class="black black-border">DIVE IN</a>
         <div class="number black">04</div>
       </section>
       <section class="whatmore">
